# django-okta-client

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  StartLocalContainer.ps1  StopLocalContainer.ps1  build.sh  deploy_fresh_test_site.sh  kill.sh  pyproject.toml  requirements-production.txt  requirements.txt  settings.py  setup.py  start_local_container.py  start_local_container.sh  stop_local_container.sh  urls.py
.github/workflows/: deploy-python-package.dev.yml  deploy-python-package.stable.yml  validate-package-python.yml
okta_client/: __init__.py  __main__.py  admin.py  api_client.py  apps.py  auth_backends.py  exceptions.py  groups.py  managers.py  mixins.py  models.py  settings.py  signals.py  tests.py  urls.py  utils.py  views.py
okta_client/admin/: __init__.py  options.py
okta_client/management/commands/: rewrite_okta_event_signals.py  update_users_from_okta.py
okta_client/migrations/: 0001_initial.py  0002_alter_oktauser_options_alter_oktauser_managers_and_more.py  0003_oktauser_last_refresh_timestamp_and_more.py  0003_oktauser_okta_activated_oktauser_okta_id_and_more.py  0004_alter_oktauser_okta_id.py  0004_oktauser_okta_created_alter_oktauser_date_joined_and_more.py
okta_client/signals/: __init__.py  events.py  groups.py  handlers.py  local_handlers.py
okta_client/templates/okta-client/: index.html  signals_events.py-template
